--- a/project4/assets/css/styles.css
+++ b/project4/assets/css/styles.css
@@ -1,12 +1,30 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   font-family: 'Verdana', sans-serif;
+  background-color: white;
 }
-header {
+/* header {
 
+} */
+/* nav {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 1rem;
 }
+.nav-links {
+  font-family: 'Permanent Marker', cursive;
+  color:rgb(48, 163, 30);
+  font-size: large;
+  text-decoration: none;
+} */
 #landing-img {
     min-width: 100%;
-    height: 30em;
+    height: 25rem;
     position: relative;
     overflow: hidden;
     text-align: center;
@@ -16,9 +34,10 @@ header {
 }
 h1 {
     font-family: 'Permanent Marker', cursive;
-    font-size: 25em;
+    font-size: 12rem;
     z-index: 1;
-    color:white;
+    color:rgb(48, 163, 30);
+    text-shadow: 1px 1px 0px #0f5a13;
 
 }
 video {
@@ -29,7 +48,50 @@ video {
   height: 100%;
   width: 100%;
 }
+hr {
+  border-top: 1px solid #30a31e;
+}
 
 footer {
   
+}
+
+/* issues */
+nav {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: #30a31e;
+  padding: 1rem;
+}
+.nav-links {
+  font-family: 'Permanent Marker', cursive;
+  color:white;
+  font-size: large;
+  text-decoration: none;
+}
+.row {
+  display: flex;
+  justify-content: space-evenly;
+}
+.card {
+  height: 30rem;
+  width: 25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.sub-card {
+  background-color: rgb(48, 163, 30);
+  text-align: right;
+}
+h2 {
+  margin-right: 1rem;
+  color: white;
+  font-family: 'Permanent Marker', cursive;
+}
+img {
+  object-fit: contain;
+
 }
