--- a/project4/assets/css/styles.css
+++ b/project4/assets/css/styles.css
@@ -2,29 +2,42 @@
   margin: 0;
   padding: 0;
 }
+html {
+  height: 100%;
+}
 body {
   font-family: 'Verdana', sans-serif;
   background-color: white;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
-/* header {
-
-} */
-/* nav {
+header {
+  background-color: #30a31e;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding:0 3rem;
+}
+nav {
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  background-color: #30a31e;
   padding: 1rem;
 }
 .nav-links {
   font-family: 'Permanent Marker', cursive;
-  color:rgb(48, 163, 30);
+  margin-left: 3rem;
+  color:white;
   font-size: large;
   text-decoration: none;
-} */
+}
 #landing-img {
     min-width: 100%;
-    height: 25rem;
+    height: 30rem;
     position: relative;
     overflow: hidden;
     text-align: center;
@@ -40,6 +53,14 @@ h1 {
     text-shadow: 1px 1px 0px #0f5a13;
 
 }
+main {
+  flex: 1 0 auto;
+}
+h2 {
+  color: white;
+  font-family: 'Permanent Marker', cursive;
+  font-size: x-large;
+}
 video {
   object-fit: cover;
   position: absolute;
@@ -52,25 +73,23 @@ hr {
   border-top: 1px solid #30a31e;
 }
 
-footer {
+ footer {
+  background-color: #30a31e;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding:1rem 3rem;
+  flex-shrink: 0;
   
+} 
+.nav-links-f {
+  font-family: 'Permanent Marker', cursive;
+  color:white;
+  text-decoration: none;
 }
 
 /* issues */
-nav {
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  background-color: #30a31e;
-  padding: 1rem;
-}
-.nav-links {
-  font-family: 'Permanent Marker', cursive;
-  color:white;
-  font-size: large;
-  text-decoration: none;
-}
+
 .row {
   display: flex;
   justify-content: space-evenly;
@@ -81,17 +100,47 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  border-radius: 2rem;
+}
+.card:hover img {
+  border: 0.24rem solid #30a31e;
+  opacity: 50%;
+}
+.card:hover .sub-card {
+  background-color: white;
+  border-left: 0.24rem solid #30a31e;
+}
+.card:hover h2 {
+  color: #30a31e;
 }
 .sub-card {
   background-color: rgb(48, 163, 30);
   text-align: right;
+  padding: 0.5em 0.5rem;
+  border-radius: 0 0 0.5rem 0.5rem;
 }
-h2 {
-  margin-right: 1rem;
-  color: white;
-  font-family: 'Permanent Marker', cursive;
-}
+
 img {
   object-fit: contain;
+  border-radius: 0.5rem 0.5rem 0 0;
+}
 
+form {
+  text-align: left;
+  display: flex;
+  flex-direction:column;
+  justify-content:space-evenly;
+  background-color: rgb(48, 163, 30);
+  padding: 1rem 1rem;
+  border-radius: 1rem;
+}
+label {
+  font-family: 'Permanent Marker', cursive;
+  color:white;
+}
+input {
+  border-radius: 0.75rem;
+  margin: 1rem 1rem;
+  padding: 0.5rem 1rem;
+  font-family: 'Permanent Marker', cursive;  
 }
